--- a/.development.env
+++ b/.development.env
@@ -1,3 +1,3 @@
 # SQLALCHEMY_DATABASE_URI = 'sqlite:///../lincmsdev.db'
-SQLALCHEMY_DATABASE_URI = 'mysql+cymysql://root:ILoveCola@localhost:3306/LightFactory?charset=utf8mb4'
+SQLALCHEMY_DATABASE_URI = 'mysql+cymysql://root:ILoveCola@localhost:3306/project_t_db?charset=utf8mb4'
 SECRET_KEY = '\x88W\xf09\x91\x07\x98\x89\x87\x96\xa0A\xc68\xf9\xecJJU\x17\xc5V\xbe\x8b\xef\xd7\xd8\xd3\xe6\x95*4'
