--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,8 +1,12 @@
-Lin-CMS==0.3.1
-Flask-Cors==3.0.9
-python-dotenv==0.15.0
-gevent==20.9.0
-gunicorn==20.0.4
+Lin-CMS==0.4.5
+pillow==9.0.0
+flask-cors==3.0.10
+gunicorn==20.1.0
+gevent==21.8.0
+flask-socketio==5.1.1
+blinker==1.4
+python-dotenv==0.19.2
+gevent-websocket==0.10.1
 beautifulsoup4==4.10.0
 grequests==0.6.0
 lxml==4.7.1
